build/log/idf_py_stderr_output_32967
Command: make -j 10 all
/home/pfasantos/esp/estoque-http-teste/main/main.c: In function 'http_get_request':
/home/pfasantos/esp/estoque-http-teste/main/main.c:68:10: error: 'esp_http_client_config_t' has no member named 'insecure'
   68 |         .insecure = true           // Ignora validação TLS
      |          ^~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7161: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
